--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image Compressor Pro - Optimize Images for Any Platform</title>
+    <title>Simple Image Compression - Optimize Images for Any Platform (Esty/Shopee/LinkedIn)</title>
     <meta name="description" content="Compress JPG and PNG images client-side with presets for Etsy, Shopee, LinkedIn and more. No upload required - everything happens in your browser.">
     
     <!-- Plausible Analytics -->
