--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Versioned favicon to prevent browser caching issues -->
+    <link rel="icon" type="image/svg+xml" href="/favicon-v2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Easy Image Compress - Professional Image Optimization Tool</title>
     <meta name="description" content="Compress JPG and PNG images instantly with our professional client-side tool. Perfect for Etsy, Shopee, LinkedIn and more. No uploads required - everything happens in your browser securely.">
