--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     
     <!-- Plausible Analytics -->
     <script defer data-domain="easyimagecompress.com" src="https://plausible.io/js/script.js"></script>
+    <script async defer data-domain="easyimagecompress.app" src="https://plausible.io/js/script.js"></script>
     
     <!-- Sentry Error Tracking -->
     <script
