correct site name

--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
     <meta name="keywords" content="image compression, image optimizer, Etsy images, Shopee images, LinkedIn banner, JPG compress, PNG compress, client-side compression, image resizer">
     <meta name="author" content="Coded Cheese">
     <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://easyimagecompress.app/" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://easyimagecompress.com/">
+    <meta property="og:url" content="https://easyimagecompress.app/">
     <meta property="og:title" content="Easy Image Compress - Professional Image Optimization Tool">
     <meta property="og:description" content="Compress JPG and PNG images instantly with our professional client-side tool. Perfect for Etsy, Shopee, LinkedIn and more. No uploads required.">
-    <meta property="og:image" content="https://easyimagecompress.com/og-image.jpg">
+    <meta property="og:image" content="https://easyimagecompress.app/og-image.jpg">
+    <meta property="og:site_name" content="Easy Image Compress">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://easyimagecompress.com/">
+    <meta property="twitter:url" content="https://easyimagecompress.app/">
     <meta property="twitter:title" content="Easy Image Compress - Professional Image Optimization Tool">
     <meta property="twitter:description" content="Compress JPG and PNG images instantly with our professional client-side tool. Perfect for Etsy, Shopee, LinkedIn and more.">
-    <meta property="twitter:image" content="https://easyimagecompress.com/og-image.jpg">
+    <meta property="twitter:image" content="https://easyimagecompress.app/og-image.jpg">
     
     <!-- Accessibility -->
     <meta name="theme-color" content="#2563eb">
@@ -73,7 +75,7 @@
       "@type": "WebApplication",
       "name": "Easy Image Compress",
       "description": "Professional image compression tool for e-commerce and content creators. Compress JPG and PNG images client-side with presets for Etsy, Shopee, LinkedIn and more.",
-      "url": "https://easyimagecompress.com",
+      "url": "https://easyimagecompress.app",
       "applicationCategory": "UtilityApplication",
       "operatingSystem": "Web Browser",
       "browserRequirements": "Requires JavaScript. Modern browser with HTML5 Canvas support.",
