--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <meta property="og:url" content="https://easyimagecompress.app/">
     <meta property="og:title" content="Easy Image Compress - Professional Image Optimization Tool">
     <meta property="og:description" content="Compress JPG and PNG images instantly with our professional client-side tool. Perfect for Etsy, Shopee, LinkedIn and more. No uploads required.">
-    <meta property="og:image" content="https://easyimagecompress.app/og-image.jpg">
+    <!-- You can comment it out -->
+<!-- <meta property="og:image" content="..."> -->
     <meta property="og:site_name" content="Easy Image Compress">
 
     <!-- Twitter -->
@@ -26,7 +27,8 @@
     <meta property="twitter:url" content="https://easyimagecompress.app/">
     <meta property="twitter:title" content="Easy Image Compress - Professional Image Optimization Tool">
     <meta property="twitter:description" content="Compress JPG and PNG images instantly with our professional client-side tool. Perfect for Etsy, Shopee, LinkedIn and more.">
-    <meta property="twitter:image" content="https://easyimagecompress.app/og-image.jpg">
+   <!-- You can comment it out -->
+<!-- <meta property="og:image" content="..."> -->
     
     <!-- Accessibility -->
     <meta name="theme-color" content="#2563eb">
