--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     
     <!-- Plausible Analytics -->
     <script async defer data-domain="easyimagecompress.app" src="https://plausible.io/js/script.js"></script>
+
+    <!-- Umami Analytics -->
+    <script async defer data-website-id="4b2aceb2-2076-4934-ba2c-c6c9f6764f1c" src="https://umami-web-8s82.onrender.com/umami.js"></scrip
     
     <!-- Sentry Error Tracking -->
     <script
