--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Umami Analytics -->
-    <script async defer data-website-id="33ddf57c-baa1-436f-b69a-ccf007507a39" src="https://umami.codedcheese.com/script.js"></scrip
+    <script async defer data-website-id="33ddf57c-baa1-436f-b69a-ccf007507a39" src="https://stats.codedcheese.com/script.js"></scrip
     
     <!-- Sentry Error Tracking -->
     <script
